--- a/styles/main_page.css
+++ b/styles/main_page.css
@@ -1,5 +1,3 @@
-
-
 /* Конфигуратор на разводящей*/
 
 .configurator-option .container {
@@ -57,11 +55,17 @@
     flex-wrap: wrap;
   }
   .title-conf {
-    font-size: 30px;
+    font-size: 28px;
   }
   .subtitle-conf {
-    font-size: 16px;
+    font-size: 18px;
   }
+  .title-conf::after {
+    font-size: 20px;
+    width: 33px;
+    height: 33px;
+  }
+  .configurator-option .container {
+    margin-top: 45px;
 }
-
-
+}
